# canim

./: -.s  .clangd  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  Makefile  NOTES  README.md  TODO.md  a.out  flake.nix  shared.h  test_canim  vcpkg.json
.cache/clangd/index/: core.c.BE67F2F4A1AD1CBC.idx  core.h.EEBA2C2760EF00B9.idx  glad.c.8F535D8542FA48AB.idx  glad.h.2813A7AFE8B74A53.idx  khrplatform.h.BDDBBE02E308F0EF.idx
.forgejo/workflows/: ci.yml
.github/workflows/: build.yml
cmake/: canimConfig.cmake.in
demos/: cube.off
docs/latex/: annotated.tex  canim_8h.tex  canim_8h__incl.md5  canim_8h_source.tex  core_8c.tex  core_8c__incl.md5  core_8c_source.tex  core_8h.tex  core_8h__dep__incl.md5  core_8h__incl.md5  core_8h_source.tex  dir_1f6e0c4656fa8537bb95d4658659e347.tex  dir_1f6e0c4656fa8537bb95d4658659e347_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_aebb8dcc11953d78e620bbef0b9e2183.tex  dir_aebb8dcc11953d78e620bbef0b9e2183_dep.md5  dir_c86603f79b902ad390ffc2674fbc4470.tex  dir_c86603f79b902ad390ffc2674fbc4470_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.tex  dir_e329c085c30b4489013b816a7501fa26.tex  dir_e329c085c30b4489013b816a7501fa26_dep.md5  dirs.tex  endian_8c.tex  endian_8c__incl.md5  endian_8c_a11200224381a57518fb24e5dd6f124af_cgraph.md5  endian_8c_a150e220651832c537f784fba6e530bc7_icgraph.md5  endian_8c_a17b82d598240d8fb05f46ece4283e840_icgraph.md5  endian_8c_a1af1db5fa8e434820befad352e247d67_cgraph.md5  endian_8c_a268b70d8a95acb3af5751990bb6b3fce_cgraph.md5  endian_8c_a32a83a1ffa627b785662424f22a16aa7_icgraph.md5  endian_8c_a374662ee5049fcc5c08ffb945cc1fd30_icgraph.md5  endian_8c_a4a12d5b3e99b9c91339f27ff5cdeaee5_cgraph.md5  endian_8c_a50879eccdead204d431798be504cbc98_icgraph.md5  endian_8c_a9c8fc375138d7e490b712df49a63ccd1_cgraph.md5  endian_8c_ac92232f9a68f86f70f658e910462d9f7_icgraph.md5  endian_8c_acbb5b7c722a3159a437f3c0ea631390c_cgraph.md5  endian_8c_ad51a6a64ab5dc4ba254a9906f5c72ff7_cgraph.md5  endian_8c_adfd0e05cfd26462597bac695a832095d_icgraph.md5  endian_8c_ae19cf2dc6177e2dad2c3f46165a7b1b8_icgraph.md5  (+40 more)
gfx/: gfx_api.h  gfx_gl.c
include/canim/: arena.h  canim.h  core.h  data.h  engine.h  gfx.h  io.h  loader.h  log.h  math.h  node.h  obj.h  platform.h
pkgconfig/: libcanim.pc.in  libcanim_gl.pc.in
src/: CMakeLists.txt
src/arena/: arena.c
src/core/: core.c  endian.c  svec.c  utils.c
src/data/: da.c
src/engine/: engine.c
src/gfx/: gl.c  tri.frag  tri.vert  vk.c
src/io/: ffmpeg.c  pdf.c  screen_buf.c  utils.c  zlib.c
src/loader/: loader.c
src/log/: log.c
src/math/: math_utils.c  matrix.c  quat.c  vec2.c  vec3.c  vector.c
tests/: CMakeLists.txt  a.out  main.c  test.tex  test_canim  test_da.c  test_log.c  test_vec.c  test_windowing.c
